feat: Custom ClassLoader architecture - no JVM args needed
- Replaced ClassLoader injection with ScalaPluginClassLoader
- Works on Java 8-21 without --add-opens flags
- Each plugin gets isolated ClassLoader for Scala classes
- Bukkit API shared via parent delegation
- Enhanced example with Scala 3 features:
  - Enums, case classes, pattern matching
  - Extension methods, opaque types, union types
  - For comprehensions, higher-order functions
  - Async with Future